[gd_scene load_steps=5 format=3 uid="uid://c888tylqobgna"]

[ext_resource type="FontFile" uid="uid://drweo2a3mldo3" path="res://asset/fonts/Xolonium-Regular.ttf" id="1_e03ak"]
[ext_resource type="Script" path="res://scene/ui.gd" id="1_s42vs"]

[sub_resource type="InputEventAction" id="InputEventAction_35tbp"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_n3rsr"]
events = [SubResource("InputEventAction_35tbp")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_s42vs")

[node name="Score" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_e03ak")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Msg" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -237.0
offset_top = -221.0
offset_right = 243.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_e03ak")
theme_override_font_sizes/font_size = 64
text = "Dodge the creeps!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="StartBtn" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -122.0
offset_top = -140.0
offset_right = 122.0
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_e03ak")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_n3rsr")
text = "START"

[node name="MsgTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartBtn" to="." method="_on_start_btn_pressed"]
[connection signal="timeout" from="MsgTimer" to="." method="_on_msg_timer_timeout"]
